typos and pricing updates

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
               <div class="card-body p-0">
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">
-                    <span class="font-weight-bold">Type:</span> Annual
+                    <span class="font-weight-bold">Type:</span> Quarterly, semi-annual, annual
                   </li>
                   <li class="list-group-item">
                     <span class="font-weight-bold">How many:</span> 4
@@ -238,7 +238,7 @@
                     <span class="font-weight-bold">Eligibility:</span> Open to businesses in Oregon
                   </li>
                   <li class="list-group-item">
-                    <span class="font-weight-bold">Cost:</span> $12000/year
+                    <span class="font-weight-bold">Cost:</span> $3-12000 depending on commitment
                   </li>
                   <li class="list-group-item">
                     <p class="font-weight-bold">Benefits</p>
@@ -382,7 +382,7 @@
             Often, this is a difficult decision, and there are times when we get more requests than we can accommodate.
           </p>
           <p>
-            When selecting sustaining sponsors, we start with the order in which we recieved requests to become a sponsor, and the location of the potential sponsor.
+            When selecting sustaining sponsors, we start with the order in which we received requests to become a sponsor, and the location of the potential sponsor.
             We also consider the appropriateness of the brand, and whether it will be a good fit for The Portland Pour.
             Ideally, we'll be able to accomodate a group of sustaing sponsors who's products compliment each other, and that give us a good selection of spirits and items that we can use in our art and recipes.
           </p>
@@ -414,7 +414,7 @@
           <h2 class="text-center">Become a sponsor</h2>
           <p class="text-center">Becoming a sponsor of The Portland Pour is as easy as filling out the form.</p>
           <p class="text-center">Don't worry, you don't have to pay anything now.</p>
-          <p class="text-center">When we recieve your completed form, we'll be in touch to set up a time to discuss the program and your marketing goals, after which, we'll set up your account and billing (if any).</p>
+          <p class="text-center">When we receive your completed form, we'll be in touch to set up a time to discuss the program and your marketing goals, after which, we'll set up your account and billing (if any).</p>
         </div>
       </div>
       <div class="row justify-content-center">
