--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             Aside from our own presence on social media, we can provide guidance for your online marketing
           </p>
           <p>
-            Sustaining sponsors have access to our social media services, whether you need help or coaching, we're here to advise and help grown your social footprint and expand your customer base.
+            Sustaining sponsors have access to our social media services, whether you need help or coaching, we're here to advise and help grow your social footprint and expand your customer base.
           </p>
         </div>
       </div>
@@ -384,7 +384,7 @@
           <p>
             When selecting sustaining sponsors, we start with the order in which we received requests to become a sponsor, and the location of the potential sponsor.
             We also consider the appropriateness of the brand, and whether it will be a good fit for The Portland Pour.
-            Ideally, we'll be able to accomodate a group of sustaing sponsors who's products compliment each other, and that give us a good selection of spirits and items that we can use in our art and recipes.
+            Ideally, we'll be able to accomodate a group of sustaining sponsors who's products compliment each other, and that give us a good selection of spirits and items that we can use in our art and recipes.
           </p>
           <p>
             Startup sponsors are also restricted to beverage startups in Oregon.
